Switch to Radarr musl build
Radarr builds Linux musl builds with improved stability for Alpine.

--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -51,7 +51,7 @@ jobs:
           IMAGE_NAME=failfr8er/radarr
           RADARR_RAW=$(curl -H "Accept: application/vnd.github.v3+json" -s https://api.github.com/repos/radarr/radarr/releases/latest)
           RADARR_VERSION=$(echo "${RADARR_RAW}" | jq -r '.tag_name')
-          RADARR_ASSET=$(echo "${RADARR_RAW}" | jq -r '.assets[] | select(.name | endswith(".linux.tar.gz")).browser_download_url')
+          RADARR_ASSET=$(echo "${RADARR_RAW}" | jq -r '.assets[] | select(.name | endswith(".linux-musl-core-x64.tar.gz")).browser_download_url')
 
           echo ::set-output name=RADARR_VERSION::${RADARR_VERSION}
 
@@ -59,8 +59,8 @@ jobs:
 
           docker buildx build \
             --file Dockerfile \
-            --cache-from=type=local,src=/tmp/.buildx \
-            --cache-to=type=local,dest=/tmp/.buildx \
+            --cache-from=type=local,src=/tmp/.buildx-cache \
+            --cache-to=type=local,dest=/tmp/.buildx-cache \
             --tag ${IMAGE_NAME}:latest \
             --tag ${IMAGE_NAME}:3 \
             --tag ${IMAGE_NAME}:${RADARR_VERSION} \
