set alpine version to latest

--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -58,11 +58,11 @@ jobs:
           set -e
           [[ "${{ inputs.SHELL_XTRACE_ENABLED }}" = "true" ]] && set -o xtrace
 
-          ALPINE_VERSION=3.12
           IMAGE_NAME=failfr8er/radarr
           RADARR_RAW=$(curl -H "Accept: application/vnd.github.v3+json" -s https://api.github.com/repos/radarr/radarr/releases/latest)
           RADARR_VERSION=$(echo "${RADARR_RAW}" | jq -r '.tag_name')
           RADARR_ASSET=$(echo "${RADARR_RAW}" | jq -r '.assets[] | select(.name | endswith(".linux-musl-core-x64.tar.gz")).browser_download_url')
+          ALPINE_VERSION="latest"
 
           echo ::set-output name=RADARR_VERSION::${RADARR_VERSION}
 
