--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -60,25 +60,29 @@ jobs:
 
           IMAGE_NAME=failfr8er/radarr
           RADARR_RAW=$(curl -H "Accept: application/vnd.github.v3+json" -s https://api.github.com/repos/radarr/radarr/releases/latest)
-          RADARR_VERSION=$(echo "${RADARR_RAW}" | jq -r '.tag_name')
           RADARR_ASSET=$(echo "${RADARR_RAW}" | jq -r '.assets[] | select(.name | endswith(".linux-musl-core-x64.tar.gz")).browser_download_url')
           ALPINE_VERSION="latest"
 
           echo ::set-output name=RADARR_VERSION::${RADARR_VERSION}
 
           wget "${RADARR_ASSET}"
+          # Set Radarr version
+          RADARR_VERSION=$(jq -r '.tag_name' <<< "${RADARR_RAW}")
+          RADARR_VERSION_MAJOR="${RADARR_VERSION%%.*}"
+          RADARR_VERSION_MINOR="${RADARR_VERSION%.*.*}"
 
           docker buildx build \
             --file Dockerfile \
             --cache-from=type=local,src=/tmp/.buildx-cache \
             --cache-to=type=local,dest=/tmp/.buildx-cache \
             --tag ${IMAGE_NAME}:latest \
-            --tag ${IMAGE_NAME}:3 \
             --tag ${IMAGE_NAME}:${RADARR_VERSION} \
             --push \
             --build-arg ALPINE_VERSION=${ALPINE_VERSION} \
             --build-arg RADARR_VERSION="${RADARR_VERSION:1}" \
             --platform=linux/amd64 \
+            --tag "${IMAGE_NAME}:${RADARR_VERSION_MAJOR}" \
+            --tag "${IMAGE_NAME}:${RADARR_VERSION_MINOR}" \
             .
 
       - name: Run Trivy vulnerability scanner
