fix readability and linting issues

--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -55,16 +55,19 @@ jobs:
       - name: Build and publish
         id: vars
         run: |
-          set -e
+          set -o errexit
           [[ "${{ inputs.SHELL_XTRACE_ENABLED }}" = "true" ]] && set -o xtrace
 
-          IMAGE_NAME=failfr8er/radarr
-          RADARR_RAW=$(curl -H "Accept: application/vnd.github.v3+json" -s https://api.github.com/repos/radarr/radarr/releases/latest)
-          RADARR_ASSET=$(echo "${RADARR_RAW}" | jq -r '.assets[] | select(.name | endswith(".linux-musl-core-x64.tar.gz")).browser_download_url')
           ALPINE_VERSION="latest"
+          IMAGE_NAME="failfr8er/radarr"
 
+          # Set Radarr release information
+          RADARR_RAW="$(curl -H "Accept: application/vnd.github.v3+json" -s https://api.github.com/repos/radarr/radarr/releases/latest)"
 
-          wget "${RADARR_ASSET}"
+          # Fetch Radarr asset
+          RADARR_ASSET=$(jq -r '.assets[] | select(.name | endswith(".linux-musl-core-x64.tar.gz")).browser_download_url' <<< "${RADARR_RAW}")
+          [[ -e "${RADARR_ASSET##*/}" ]] || wget --no-verbose "${RADARR_ASSET}"
+
           # Set Radarr version
           RADARR_VERSION=$(jq -r '.tag_name' <<< "${RADARR_RAW}")
           RADARR_VERSION_MAJOR="${RADARR_VERSION%%.*}"
@@ -83,16 +86,15 @@ jobs:
 
           docker buildx build \
             --file Dockerfile \
-            --cache-from=type=local,src=/tmp/.buildx-cache \
-            --cache-to=type=local,dest=/tmp/.buildx-cache \
-            --tag ${IMAGE_NAME}:latest \
-            --tag ${IMAGE_NAME}:${RADARR_VERSION} \
-            --push \
-            --build-arg ALPINE_VERSION=${ALPINE_VERSION} \
-            --build-arg RADARR_VERSION="${RADARR_VERSION:1}" \
-            --platform=linux/amd64 \
+            --cache-from=type="local,src=/tmp/.buildx-cache" \
+            --cache-to=type="local,dest=/tmp/.buildx-cache" \
+            --tag "${IMAGE_NAME}:latest" \
+            --tag "${IMAGE_NAME}:${RADARR_VERSION}" \
             --tag "${IMAGE_NAME}:${RADARR_VERSION_MAJOR}" \
             --tag "${IMAGE_NAME}:${RADARR_VERSION_MINOR}" \
+            --build-arg "ALPINE_VERSION=${ALPINE_VERSION}" \
+            --build-arg "RADARR_VERSION=${RADARR_VERSION:1}" \
+            --platform="linux/amd64" \
             ${DOCKER_PUSH} \
             .
 
